generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum CategoryType {
  MAIN
  SUB
}

model Category {
  id        String       @id @default(cuid())
  name      String
  type      CategoryType
  parentId  String?      @map("parent_id")
  sortOrder Int          @default(0) @map("sort_order")
  isActive  Boolean      @default(true) @map("is_active")
  createdAt DateTime     @default(now()) @map("created_at")
  updatedAt DateTime     @updatedAt @map("updated_at")

  parent   Category?  @relation("CategoryHierarchy", fields: [parentId], references: [id])
  children Category[] @relation("CategoryHierarchy")
  products Product[]

  @@map("categories")
}

model Store {
  id               String    @id @default(cuid())
  storeName        String    @map("store_name") @db.VarChar(100)
  storeStatusCode  String    @default("OPEN") @map("store_status_code") @db.VarChar(30)
  defaultOrderInfo String?   @map("default_order_info")
  representative   String?   @db.VarChar(50)
  businessRegNo    String?   @map("business_reg_no") @db.VarChar(20)
  ecommerceRegNo   String?   @map("ecommerce_reg_no") @db.VarChar(50)
  businessAddress  String?   @map("business_address") @db.VarChar(300)
  fashionTypeCode  String?   @map("fashion_type_code") @db.VarChar(30)
  csHours          String?   @map("cs_hours") @db.VarChar(200)
  csEmail          String?   @map("cs_email") @db.VarChar(200)
  csContact        String?   @map("cs_contact") @db.VarChar(20)
  csKakaoId        String?   @map("cs_kakao_id") @db.VarChar(100)
  createdAt        DateTime  @default(now()) @map("created_at")
  updatedAt        DateTime  @updatedAt @map("updated_at")

  storeLikes       StoreLike[]
  tags             Tag[]
  products         Product[]

  @@map("store")
}

model CustomerAddress {
  id            String    @id @default(cuid())
  customerId    String    @map("customer_id")
  recipientName String    @map("recipient_name") @db.VarChar(100)
  postalCode    String    @map("postal_code") @db.VarChar(10)
  address       String    @db.VarChar(300)
  addressDetail String?   @map("address_detail") @db.VarChar(200)
  contactNo     String?   @map("contact_no") @db.VarChar(20)
  deliveryMemo  String?   @map("delivery_memo") @db.VarChar(500)
  updatedAt     DateTime  @default(now()) @map("updated_at")
  isDefault     Boolean   @default(false) @map("is_default")
  isActive      Boolean   @default(true) @map("is_active")

  customer      Customer  @relation(fields: [customerId], references: [id], onDelete: Cascade)

  @@map("customer_address")
}

model ProductLike {
  customerId  String   @map("customer_id")
  productId   String   @map("product_id")

  customer    Customer @relation(fields: [customerId], references: [id], onDelete: Cascade)

  @@id([customerId, productId])
  @@map("product_like")
}

model StoreLike {
  customerId  String   @map("customer_id")
  storeId     String   @map("store_id")

  customer    Customer @relation(fields: [customerId], references: [id], onDelete: Cascade)
  store       Store    @relation(fields: [storeId], references: [id], onDelete: Cascade)

  @@id([customerId, storeId])
  @@map("store_like")
}

model CodeGroup {
  groupId     String       @id @map("group_id") @db.VarChar(30)
  groupName   String       @map("group_name") @db.VarChar(100)
  description String?
  sortOrder   Int          @default(0) @map("sort_order")
  isActive    Boolean      @default(true) @map("is_active")
  createdAt   DateTime     @default(now()) @map("created_at")
  updatedAt   DateTime     @updatedAt @map("updated_at")

  codes CommonCode[]

  @@map("code_group")
}

model Customer {
  id                String    @id @default(cuid())
  userTypeCode      String    @default("GENERAL") @map("user_type_code") @db.VarChar(30)
  customerTypeCode  String    @default("NORMAL") @map("customer_type_code") @db.VarChar(30)
  memberStatusCode  String    @default("ACTIVE") @map("member_status_code") @db.VarChar(30)
  custName          String    @map("cust_name") @db.VarChar(100)
  birthDate         DateTime? @map("birth_date") @db.Date
  mobileNo          String?   @map("mobile_no") @db.VarChar(20)
  email             String    @unique @db.VarChar(200)
  genderCode        String?   @map("gender_code") @db.VarChar(30)
  height            Decimal?  @db.Decimal(5, 1)
  weight            Decimal?  @db.Decimal(5, 1)
  point             Int       @default(0)
  marketingYn       Boolean   @default(false) @map("marketing_yn")
  notificationYn    Boolean   @default(false) @map("notification_yn")
  joinedAt          DateTime  @default(now()) @map("joined_at")
  dormantAt         DateTime? @map("dormant_at")
  lastLoginAt       DateTime? @map("last_login_at")
  withdrawnAt       DateTime? @map("withdrawn_at")
  createdAt         DateTime  @default(now()) @map("created_at")
  updatedAt         DateTime  @updatedAt @map("updated_at")

  addresses         CustomerAddress[]
  login             CustomerLogin?
  productLikes      ProductLike[]
  storeLikes        StoreLike[]

  @@map("customer")
}

model CustomerLogin {
  id        String   @id @default(cuid())
  customerId String   @unique @map("customer_id") @db.VarChar(50)
  loginId   String   @unique @map("login_id") @db.VarChar(100)
  loginPw   String   @map("login_pw") @db.VarChar(200)
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  customer Customer @relation(fields: [customerId], references: [id], onDelete: Cascade)

  @@map("customer_login")
}

model Tag {
  id        String   @id @default(cuid())
  storeId   String   @map("store_id")
  tagName   String   @map("tag_name") @db.VarChar(100)
  tagValue  BigInt   @map("tag_value")
  isActive  Boolean  @default(true) @map("is_active")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  store     Store    @relation(fields: [storeId], references: [id], onDelete: Cascade)

  @@map("tag")
}

model Product {
  id                String    @id @default(cuid())
  storeId           String    @map("store_id")
  productStatusCode String    @default("ON_SALE") @map("product_status_code") @db.VarChar(30)
  categoryId        String?   @map("category_id")
  productName       String    @map("product_name") @db.VarChar(300)
  basePrice         Decimal   @map("base_price") @db.Decimal(10, 2)
  tags              BigInt    @default(0)
  isActive          Boolean   @default(true) @map("is_active")
  createdAt         DateTime  @default(now()) @map("created_at")
  updatedAt         DateTime  @updatedAt @map("updated_at")

  store             Store     @relation(fields: [storeId], references: [id], onDelete: Cascade)
  category          Category? @relation(fields: [categoryId], references: [id])
  productColors     ProductColor[]
  productSizes      ProductSize[]
  stocks            ProductStock[]

  @@map("product")
}

model Color {
  id         String   @id @default(cuid())
  category   String?  @db.VarChar(30)
  colorName  String   @map("color_name") @db.VarChar(50)
  sortOrder  Int      @default(0) @map("sort_order")
  isActive   Boolean  @default(true) @map("is_active")
  createdAt  DateTime @default(now()) @map("created_at")
  updatedAt  DateTime @updatedAt @map("updated_at")

  productColors ProductColor[]
  stocks        ProductStock[]

  @@map("color")
}

model Size {
  id         String   @id @default(cuid())
  sizeEn     String   @map("size_en") @db.VarChar(10)
  sizeKo     String?  @map("size_ko") @db.VarChar(20)
  sizeValue  Int?     @map("size_value")
  sortOrder  Int      @default(0) @map("sort_order")
  isActive   Boolean  @default(true) @map("is_active")
  createdAt  DateTime @default(now()) @map("created_at")
  updatedAt  DateTime @updatedAt @map("updated_at")

  productSizes ProductSize[]
  stocks       ProductStock[]

  @@map("size")
}

model ProductColor {
  id        String  @id @default(cuid())
  productId String  @map("product_id")
  colorId   String  @map("color_id")
  sortOrder Int     @default(0) @map("sort_order")
  isActive  Boolean @default(true) @map("is_active")

  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)
  color   Color   @relation(fields: [colorId], references: [id])

  @@unique([productId, colorId])
  @@map("product_color")
}

model ProductSize {
  id        String  @id @default(cuid())
  productId String  @map("product_id")
  sizeId    String  @map("size_id")
  sortOrder Int     @default(0) @map("sort_order")
  isActive  Boolean @default(true) @map("is_active")

  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)
  size    Size    @relation(fields: [sizeId], references: [id])

  @@unique([productId, sizeId])
  @@map("product_size")
}

model ProductStock {
  id              String   @id @default(cuid())
  productId       String   @map("product_id")
  colorId         String?  @map("color_id")
  sizeId          String?  @map("size_id")
  stockCount      Int      @default(0) @map("stock_count")
  additionalPrice Decimal  @default(0) @map("additional_price") @db.Decimal(10, 2)
  isActive        Boolean  @default(true) @map("is_active")
  createdAt       DateTime @default(now()) @map("created_at")
  updatedAt       DateTime @updatedAt @map("updated_at")

  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)
  color   Color?  @relation(fields: [colorId], references: [id])
  size    Size?   @relation(fields: [sizeId], references: [id])

  @@unique([productId, colorId, sizeId])
  @@map("product_stock")
}

model Event {
  id            String         @id @default(cuid())
  eventName     String         @map("event_name") @db.VarChar(200)
  eventTypeCode String         @default("TIMESALE") @map("event_type_code") @db.VarChar(30)
  startAt       DateTime       @map("start_at")
  endAt         DateTime       @map("end_at")
  isActive      Boolean        @default(true) @map("is_active")
  createdAt     DateTime       @default(now()) @map("created_at")
  updatedAt     DateTime       @updatedAt @map("updated_at")

  eventProducts EventProduct[]

  @@map("event")
}

model EventProduct {
  id            String  @id @default(cuid())
  eventId       String  @map("event_id")
  productId     String  @map("product_id")
  discountType  String  @default("RATE") @map("discount_type") @db.VarChar(10)
  discountValue Decimal @map("discount_value") @db.Decimal(10, 2)

  event         Event   @relation(fields: [eventId], references: [id], onDelete: Cascade)

  @@map("event_product")
}

model CommonCode {
  groupId   String   @map("group_id") @db.VarChar(30)
  codeId    String   @map("code_id") @db.VarChar(30)
  codeName  String   @map("code_name") @db.VarChar(100)
  codeValue String?  @map("code_value") @db.VarChar(200)
  sortOrder Int      @default(0) @map("sort_order")
  isActive  Boolean  @default(true) @map("is_active")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  group CodeGroup @relation(fields: [groupId], references: [groupId], onDelete: Cascade)

  @@id([groupId, codeId])
  @@map("common_code")
}
